--- a/Co_lab/templates/nav.html
+++ b/Co_lab/templates/nav.html
@@ -1,10 +1,17 @@
 {% load static %}
 
-{% if request.user.is_authenticated %}
-    <h2><a href="{% url 'logout' %}">Logout</a></h2>
-{% else %}
-    <h2>
-        <a href="{% url 'register' %}">Register</a>
-        <a href="{% url 'login' %}">Login</a>
-    </h2>
-{% endif %}
+<header class="header">
+    <a href="{% url 'home' %}" class="logo">Co_lab</a>
+    
+    <nav class="navbar">
+        <a href="{% url 'home' %}">Home</a>
+        <a href="#">About-Us</a>
+        {% if request.user.is_authenticated %}
+            <a href="{% url 'logout' %}">Logout</a>
+        {% else %}
+            <a href="{% url 'register' %}">Register</a>
+            <a href="{% url 'login' %}">Login</a>
+        {% endif %}
+    </nav>
+</header>
+
