--- a/Co_lab/static/styles/styles.css
+++ b/Co_lab/static/styles/styles.css
@@ -33,7 +33,7 @@ body {
 }
 
 .logo {
-    color: #063e5e;
+    color: #1E90FF;
     font-size: 35px;
     text-decoration: none;
     font-weight: 700;
