--- a/Co_lab/templates/nav.html
+++ b/Co_lab/templates/nav.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <header class="header">
-    <a href="{% url 'home' %}" class="logo">Co_lab</a>
+    <a href="{% url 'home' %}" class="logo">Co_lab<p>(Connect, Coordinate, Conquer)</p></a>
     
     <nav class="navbar">
         <a href="{% url 'home' %}">Home</a>
