--- a/Co_lab/main/templates/main/about_us.html
+++ b/Co_lab/main/templates/main/about_us.html
@@ -2,5 +2,6 @@
 {% load static %}
 
 {% block content %}
-    <div class="slider"></div>
+    <!-- <div class="slider"></div> -->
+    <iframe src='https://my.spline.design/untitled-fafc23797301de5a07ffae46eca3b9d0/' frameborder='0' width='100%' height='100%'></iframe>
 {% endblock content %}
