--- a/Co_lab/static/styles/styles.css
+++ b/Co_lab/static/styles/styles.css
@@ -60,11 +60,11 @@ body {
 
 .slider {
     width: 15%;
-    height: 505px;
-    position: absolute;
+    height: 500px;
+    position: fixed;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-5%, -50%);
     background-image: url('images/prasanna1.png');
     background-size: 100% 100%;
     box-shadow: 1px 2px 10px 5px white;
