--- a/Co_lab/main/templates/main/about_us.html
+++ b/Co_lab/main/templates/main/about_us.html
@@ -2,8 +2,11 @@
 {% load static %}
 
 {% block content %}
-    <div class="model">
-        <iframe src='https://my.spline.design/untitled-00fd08ba05dc18fa6e6f68caadec0510/' frameborder='0' width='500px' height='500px'></iframe> 
-        <iframe src='https://my.spline.design/untitled-40a68cf67a71aad427015d0c1f830958/' frameborder='0' width='500px' height='500px'></iframe>
-    </div>
+    <!-- <div class="model">
+        <iframe src='https://my.spline.design/untitled-00fd08ba05dc18fa6e6f68caadec0510/' frameborder='0' width='300px' height='500px'></iframe> 
+        <iframe src='https://my.spline.design/untitled-40a68cf67a71aad427015d0c1f830958/' frameborder='0' width='280px' height='500px'></iframe>
+    </div> -->
+
+    
+
 {% endblock content %}
