--- a/Co_lab/static/styles/styles.css
+++ b/Co_lab/static/styles/styles.css
@@ -9,13 +9,14 @@
 
 body {
     min-height: 100vh;
-    background: url('images/background.png') no-repeat;
+    background: url('images/background1.png') repeat;
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
 }
 
 .header {
-    position: sticky;
+    position: fixed;
     max-height: 80px;
     top: 0;
     left: 0;
@@ -23,6 +24,7 @@ body {
     padding: 20px 100px;
     background: rgba(255, 255, 255, .1);
     display: flex;
+    z-index: 10;
     justify-content: space-between;
     align-items: center;
     backdrop-filter: blur(10px);
@@ -58,7 +60,7 @@ body {
     color: #f00;
 }
 
-.slider {
+/* .slider {
     width: 15%;
     height: 500px;
     position: fixed;
@@ -88,4 +90,27 @@ body {
 
 .model {
     display: flex;
+} */
+
+.container {
+    position: relative;
+    top: 80px;
+    height: calc(100vh - 100px - 40px); 
+    text-align: center;
+    margin: 20px;
+}
+
+.s-container {
+    height: 600px;
+    width: 75%;
+    padding: 10px;
+    background: rgba(255, 255, 255, .1);
+    border-radius: 20px;
+    border: 2px solid rgba(255, 255, 255, .7);
+    margin: 20px auto;
+    backdrop-filter: blur(5px);
+}
+
+.s-container iframe {
+    margin: 20px auto;
 }
