--- a/Co_lab/main/templates/main/about_us.html
+++ b/Co_lab/main/templates/main/about_us.html
@@ -8,10 +8,30 @@
     </div> -->
     <div class="container">
         <div class="s-container">
-            <iframe src='https://my.spline.design/untitled-00fd08ba05dc18fa6e6f68caadec0510/' frameborder='0' width='300px' height='500px'></iframe> 
+            <div class="ss-container">
+                <div class="s-content">
+                    <h1>Hi, I'm Aayush Shrestha</h1>
+                    <h2>Backend Developer</h2>
+                    <h3>Contributed in the backend of this project using Python(Django) and SQL Database.</h3>
+                    <p>Dedicated student pursuing higher education and a skilled developer proficient in both backend and frontend technologies. With a passion for crafting seamless user experiences and robust systems, I am committed to pushing boundaries and delivering innovative solutions. With a strong foundation in languages like Python and R.</p>
+                </div>
+                <div>
+                    <iframe src='https://my.spline.design/untitled-00fd08ba05dc18fa6e6f68caadec0510/' frameborder='0' width='300px' height='500px'></iframe>
+                </div>
+            </div>
         </div>
         <div class="s-container">
-            <iframe src='https://my.spline.design/untitled-40a68cf67a71aad427015d0c1f830958/' frameborder='0' width='280px' height='500px'></iframe>
+            <div class="ss-container">
+                <div class="s-content">
+                    <h1>Hi, I'm Prasanna Niraula</h1>
+                    <h2>Frontend Developer</h2>
+                    <h3>Contributed in the frontend using markup language like HTML and CSS</h3>
+                    <p>Dedicated student pursuing higher education and a skilled developer proficient in both backend and frontend technologies. With a passion for crafting seamless user experiences and robust systems, I am committed to pushing boundaries and delivering innovative solutions. With a strong foundation in languages like Python and R.</p>
+                </div>
+                <div>
+                    <iframe src='https://my.spline.design/untitled-40a68cf67a71aad427015d0c1f830958/' frameborder='0' width='280px' height='500px'></iframe>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock content %}
