--- a/Co_lab/static/styles/styles.css
+++ b/Co_lab/static/styles/styles.css
@@ -98,6 +98,7 @@ body {
     height: calc(100vh - 100px - 40px); 
     text-align: center;
     margin: 20px;
+    color: #fff;
 }
 
 .s-container {
@@ -111,6 +112,36 @@ body {
     backdrop-filter: blur(5px);
 }
 
-.s-container iframe {
-    margin: 20px auto;
+.ss-container {
+    justify-content: center;
+    text-align: left;
+    display: flex;
+    margin: 50px auto;
+}
+
+.s-content {
+    max-width: 600px;
+}
+
+.s-content h1 {
+    font-size: 45px;
+    font-weight: 700;
+}
+
+.s-content h2{
+    margin: 10px auto;
+    font-size: 35px;
+    font-weight: 700;
+    color: #052d46;
+}
+
+.s-content h3{
+    margin: 10px auto;
+    font-size: 20px;
+    font-weight: 700;
+    color: #41b3a3;
+}
+
+.s-content p {
+    margin: 10px auto;
 }
