--- a/Co_lab/main/templates/main/about_us.html
+++ b/Co_lab/main/templates/main/about_us.html
@@ -10,17 +10,16 @@
         <div class="s-container">
             <div class="ss-container">
                 <div class="s-content">
-                    <h1>Hi, I'm Aayush Shrestha</h1>
-                    <h2>Backend Developer</h2>
-                    <h3>Contributed in the backend of this project using Python(Django) and SQL Database.</h3>
-                    <p>Dedicated student pursuing higher education and a skilled developer proficient in both backend and frontend technologies. With a passion for crafting seamless user experiences and robust systems, I am committed to pushing boundaries and delivering innovative solutions. With a strong foundation in languages like Python and R.</p>
+                    <h1>Hi, I'm Aayush Shrestha!</h1>
+                    <h2>Fullstack Developer</h2>
+                    <p>Experienced in Django, HTML, CSS, Blender, and SQL, I've contributed to backend, frontend and database of this projects. Bringing together technical expertise and creative flair. Also the starter of the project.</p>
                 </div>
                 <div>
                     <iframe src='https://my.spline.design/untitled-00fd08ba05dc18fa6e6f68caadec0510/' frameborder='0' width='300px' height='500px'></iframe>
                 </div>
             </div>
         </div>
-        <div class="s-container">
+        <!-- <div class="s-container">
             <div class="ss-container">
                 <div class="s-content">
                     <h1>Hi, I'm Prasanna Niraula</h1>
@@ -32,6 +31,6 @@
                     <iframe src='https://my.spline.design/untitled-40a68cf67a71aad427015d0c1f830958/' frameborder='0' width='280px' height='500px'></iframe>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 {% endblock content %}
