--- a/Co_lab/static/styles/styles.css
+++ b/Co_lab/static/styles/styles.css
@@ -122,3 +122,20 @@ body {
     max-width: 600px;
     margin-top: 50px auto;
 }
+
+.s-content h1 {
+    font-size: 45px;
+    font-weight: 700;
+    color: #8d8741;
+}
+
+.s-content h2{
+    margin: 10px auto;
+    font-size: 35px;
+    font-weight: 700;
+    color: #052d46;
+}
+
+.s-content p {
+    margin: 10px auto;
+}
