--- a/Co_lab/main/templates/main/about_us.html
+++ b/Co_lab/main/templates/main/about_us.html
@@ -10,27 +10,41 @@
         <div class="s-container">
             <div class="ss-container">
                 <div class="s-content">
-                    <h1>Hi, I'm Aayush Shrestha!</h1>
+                    <h1>Hi, I'm Aayush Shrestha !</h1>
                     <h2>Fullstack Developer</h2>
-                    <p>Experienced in Django, HTML, CSS, Blender, and SQL, I've contributed to backend, frontend and database of this projects. Bringing together technical expertise and creative flair. Also the starter of the project.</p>
+                    <p>Experienced in Django, HTML, CSS, Blender, and SQL, I've contributed to backend, frontend and database of this projects. Bringing together technical expertise and creative flair. Also contributed in the idea and logical structure of the project.</p>
+                    <br>
+                    <p class="email">Email : manarjananjali625@gmail.com</p>
+                    <br>
+                    <div class="m-btn">
+                        <a href="https://www.facebook.com/profile.php?id=100042557371776">Facebook <i class='bx bxl-facebook-circle' ></i></a>
+                        <a href="https://github.com/Aayushstha001">Github <i class='bx bxl-github'></i></a>
+                    </div>
                 </div>
-                <div>
+                <div class="model">
                     <iframe src='https://my.spline.design/untitled-00fd08ba05dc18fa6e6f68caadec0510/' frameborder='0' width='300px' height='500px'></iframe>
                 </div>
             </div>
         </div>
-        <!-- <div class="s-container">
+        <div class="s-container">
             <div class="ss-container">
-                <div class="s-content">
-                    <h1>Hi, I'm Prasanna Niraula</h1>
-                    <h2>Frontend Developer</h2>
-                    <h3>Contributed in the frontend using markup language like HTML and CSS</h3>
-                    <p>Dedicated student pursuing higher education and a skilled developer proficient in both backend and frontend technologies. With a passion for crafting seamless user experiences and robust systems, I am committed to pushing boundaries and delivering innovative solutions. With a strong foundation in languages like Python and R.</p>
+                <div class="model">
+                    <!-- <iframe src='https://my.spline.design/untitled-40a68cf67a71aad427015d0c1f830958/' frameborder='0' width='280px' height='500px'></iframe> -->
+                    <iframe src='https://my.spline.design/untitled-aefc84ea3796e31d13b8fb57b6ba9629/' frameborder='0' width='300px' height='500px'></iframe>
                 </div>
-                <div>
-                    <iframe src='https://my.spline.design/untitled-40a68cf67a71aad427015d0c1f830958/' frameborder='0' width='280px' height='500px'></iframe>
+                <div class="s-content">
+                    <h1>Hi, I'm Prasanna Niraula !</h1>
+                    <h2>Frontend Developer</h2>
+                    <p>With expertise in HTML, CSS, and a focus on UI/UX design, I've contributed significantly to our website's frontend. From concept to execution, I strive to create user-friendly interfaces that leave a lasting impression.</p>
+                    <br>
+                    <p class="email">Email : prashananiraulasky@gmail.com</p>
+                    <br>
+                    <div class="m-btn">
+                        <a href="https://www.facebook.com/profile.php?id=61556399896663">Facebook <i class='bx bxl-facebook-circle' ></i></a>
+                        <a href="https://github.com/prashananiraula">Github <i class='bx bxl-github'></i></a>
+                    </div>
                 </div>
             </div>
-        </div> -->
+        </div>
     </div>
 {% endblock content %}
