--- a/Co_lab/static/styles/styles.css
+++ b/Co_lab/static/styles/styles.css
@@ -57,7 +57,7 @@ body {
 }
 
 .navbar a:hover {
-    color: #f00;
+    color: #90e0ef ;
 }
 
 /* .slider {
@@ -120,22 +120,61 @@ body {
 
 .s-content {
     max-width: 600px;
-    margin-top: 50px auto;
+    margin: 20px auto;
 }
 
 .s-content h1 {
     font-size: 45px;
     font-weight: 700;
-    color: #8d8741;
+    color: #fff;
 }
 
 .s-content h2{
-    margin: 10px auto;
+    margin: 20px auto;
     font-size: 35px;
     font-weight: 700;
-    color: #052d46;
+    color: #00171f;
 }
 
 .s-content p {
     margin: 10px auto;
+    font-size: 20px;
+    font-weight: 500;
+    color: #caf0f8;
+}
+
+.s-content .email {
+    color: #00171f;
+    font-weight: 700;
+}
+
+.model {
+    padding-right: 80px;
+}
+
+.s-content .m-btn {
+    display: flex;
+    justify-content: space-between;
+    width: 345px;
+    height: 50px;
+}
+
+.s-content .m-btn a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 100%;
+    background: #00171f;
+    border-radius: 8px;
+    font-size: 19px;
+    color: #caf0f8;
+    text-decoration: none;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+
+.s-content .m-btn a:nth-child(2) {
+    background: #caf0f8;
+    color: #00171f;
 }
