--- a/Co_lab/templates/main.html
+++ b/Co_lab/templates/main.html
@@ -6,6 +6,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Co_lab - Connect, Coordinate, Conquer</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="{% static 'styles/styles.css' %}" />
 </head>
 <body>
