--- a/Co_lab/templates/main.html
+++ b/Co_lab/templates/main.html
@@ -21,9 +21,10 @@
     </ul>
     {% endif %}
 
-    {% block content %}
+    <div class="container">
+        {% block content %}
 
-    {% endblock %}
-
+        {% endblock %}
+    </div>
 </body>
 </html>
