--- a/Co_lab/main/templates/main/company_post_form.html
+++ b/Co_lab/main/templates/main/company_post_form.html
@@ -2,4 +2,18 @@
 
 {% block content %}
     
+<h1>Employee Post</h1>
+<form class="form" action="" method="post">
+    {% csrf_token %}
+
+        <label>Post Title</label>
+        {{form.title}}
+        <br>
+        <label>Post Description</label>
+        {{form.description}}
+        <br>
+        <label>Post Image</label>
+        {{form.image}}
+        <button type="submit"">Post</button>
+</form>
 {% endblock content %}
