--- a/Co_lab/main/templates/main/home.html
+++ b/Co_lab/main/templates/main/home.html
@@ -2,4 +2,10 @@
 
 {% block content %}
     
+{% if employee.admin %}
+    <a href="{% url 'create-company-post' %}">Post</a>
+{% else %}
+    <a href="{% url 'create-employee-post' %}">Post</a>
+{% endif %}
+
 {% endblock content %}
