--- a/Co_lab/templates/nav.html
+++ b/Co_lab/templates/nav.html
@@ -8,10 +8,12 @@
         <a href="{% url 'about' %}">About-Us</a>
         {% if request.user.is_authenticated %}
             <a href="{% url 'logout' %}">Logout</a>
+            <a href="#">{{request.user}}</a>
         {% else %}
             <a href="{% url 'register' %}">Register</a>
             <a href="{% url 'login' %}">Login</a>
         {% endif %}
+        
     </nav>
 </header>
 
