--- a/Co_lab/main/templates/main/company_post_form.html
+++ b/Co_lab/main/templates/main/company_post_form.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     
-<h1>Employee Post</h1>
+<h1>Company Post</h1>
 <form class="form" action="" method="post">
     {% csrf_token %}
 
