--- a/Co_lab/static/styles/styles.css
+++ b/Co_lab/static/styles/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 .header {
-    position: sticky;
+    position: fixed;
     max-height: 80px;
     top: 0;
     left: 0;
@@ -28,6 +28,7 @@ body {
     align-items: center;
     backdrop-filter: blur(10px);
     border-bottom: 2px solid rgba(255, 255, 255, .2);
+    z-index: 10;
 }
 
 .logo {
@@ -56,7 +57,7 @@ body {
 }
 
 .navbar a:hover {
-    color: #90e0ef ;
+    color: #00171f ;
 }
 
 /* .slider {
@@ -85,11 +86,7 @@ body {
     75%{
         background-image: url('images/prasanna4.png');
     }
-}
-
-.model {
-    display: flex;
-} */
+}*/
 
 .container {
     position: relative;
