--- a/Co_lab/templates/nav.html
+++ b/Co_lab/templates/nav.html
@@ -13,7 +13,9 @@
             <a href="{% url 'register' %}">Register</a>
             <a href="{% url 'login' %}">Login</a>
         {% endif %}
-        
+        <!-- {% if employee.image %}
+                <img src="{{employee.image.url}}" height="50px">
+        {% endif %} -->
     </nav>
 </header>
 
