--- a/Co_lab/templates/nav.html
+++ b/Co_lab/templates/nav.html
@@ -6,16 +6,23 @@
     <nav class="navbar">
         <a href="{% url 'home' %}">Home</a>
         <a href="{% url 'about' %}">About-Us</a>
-        {% if request.user.is_authenticated %}
-            <a href="{% url 'logout' %}">Logout</a>
-            <a href="#">{{request.user}}</a>
-        {% else %}
-            <a href="{% url 'register' %}">Register</a>
-            <a href="{% url 'login' %}">Login</a>
-        {% endif %}
-        <!-- {% if employee.image %}
-                <img src="{{employee.image.url}}" height="50px">
-        {% endif %} -->
     </nav>
+
+    <div class="navbar">
+            {% if request.user.is_authenticated %}
+                <a href="{% url 'logout' %}">Logout</a>
+                <a href="#">{{request.user}}</a>
+            {% else %}
+                <a href="{% url 'register' %}">Register</a>
+                <a href="{% url 'login' %}">Login</a>
+            {% endif %}
+                <!-- {% if employee.image %}
+                    <a href="#"><img src="{{employee.image.url}}" height="50px"></a>
+                {% endif %} -->
+            {% if request.user.is_staff %}
+                <a href="http://127.0.0.1:8000/admin/">Admin</a>
+            {% endif %}
+    </div>
+    
 </header>
 
