--- a/Co_lab/main/templates/main/company_post_form.html
+++ b/Co_lab/main/templates/main/company_post_form.html
@@ -13,6 +13,6 @@
         <br>
         <label>Post Image</label>
         {{form.image}}
-        <button type="submit"">Post</button>
+        <button type="submit">Post</button>
 </form>
 {% endblock content %}
