--- a/Co_lab/main/templates/main/company_post_form.html
+++ b/Co_lab/main/templates/main/company_post_form.html
@@ -5,14 +5,10 @@
 <h1>Company Post</h1>
 <form class="form" action="" method="post">
     {% csrf_token %}
-        <label>Post Title</label>
-        {{form.title}}
-        <br>
-        <label>Post Description</label>
-        {{form.description}}
-        <br>
-        <label>Post Image</label>
-        {{form.image}}
+        <{% for field in form %}
+            {{field.label}}
+            {{field}}
+        {% endfor %}
         <button type="submit">Post</button>
 </form>
 {% endblock content %}
