--- a/Co_lab/main/templates/main/company_post_form.html
+++ b/Co_lab/main/templates/main/company_post_form.html
@@ -3,12 +3,9 @@
 {% block content %}
     
 <h1>Company Post</h1>
-<form class="form" action="" method="post">
+<form method="post" action="{% url 'create-company-post' %}">
     {% csrf_token %}
-        <{% for field in form %}
-            {{field.label}}
-            {{field}}
-        {% endfor %}
+    {{ form.as_p }}
         <button type="submit">Post</button>
 </form>
 {% endblock content %}
