--- a/Co_lab/main/templates/main/company_post_form.html
+++ b/Co_lab/main/templates/main/company_post_form.html
@@ -3,9 +3,9 @@
 {% block content %}
     
 <h1>Company Post</h1>
-<form method="post" action="{% url 'create-company-post' %}">
+<form method="post" action="" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
-        <button type="submit">Post</button>
+    <button type="submit">Post</button>
 </form>
 {% endblock content %}
