--- a/Co_lab/main/templates/main/home.html
+++ b/Co_lab/main/templates/main/home.html
@@ -34,7 +34,7 @@
 
 <div class="main-container">
     <div class="s-main-container1">
-        
+        {% include 'main/search-bar.html' %}
     </div>
 
     <div class="s-main-container2">
