--- a/Co_lab/static/styles/styles.css
+++ b/Co_lab/static/styles/styles.css
@@ -118,35 +118,6 @@ body {
     align-items: center;
 }
 
-
-/* .slider {
-    width: 15%;
-    height: 500px;
-    position: fixed;
-    left: 50%;
-    top: 50%;
-    transform: translate(-5%, -50%);
-    background-image: url('images/prasanna1.png');
-    background-size: 100% 100%;
-    box-shadow: 1px 2px 10px 5px white;
-    animation: sliders 8s infinite steps(1);
-}
-
-@keyframes sliders{
-    0%{ 
-        background-image: url('images/prasanna1.png'); 
-    }
-    25%{
-        background-image: url('images/prasanna2.png');
-    }
-    50%{
-        background-image: url('images/prasanna3.png');
-    }
-    75%{
-        background-image: url('images/prasanna4.png');
-    }
-}*/
-
 .container {
     position: relative;
     top: 80px;
@@ -245,9 +216,9 @@ body {
 }
 
 .s-main-container1 {
+    display: flex;
+    flex-direction: column;
     flex: 1.5;
-    background-color: rgba(255, 255, 255, .1);
-    backdrop-filter: blur(10px);
     padding: 20px;
     overflow-y: auto;
     margin: 10px;
@@ -280,57 +251,6 @@ body {
 .s-main-container3::-webkit-scrollbar {
     display: none;
 }
-
-/* .social-media-post {
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    padding: 20px;
-    margin-bottom: 20px;
-}
-
-.post-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
-}
-
-.company-info {
-    display: flex;
-    align-items: center;
-}
-
-.company-logo {
-    margin-right: 10px;
-}
-
-.company-name {
-    font-weight: bold;
-    margin: 0;
-}
-
-.host,
-.created {
-    margin: 0;
-    color: #666;
-    font-size: 14px;
-}
-
-.post-title {
-    font-size: 18px;
-    margin-top: 0;
-    margin-bottom: 5px; /* Add margin-bottom to separate title and description 
-
-.post-description {
-    margin-bottom: 10px;
-}
-
-.post-image {
-    max-width: 100%;
-    height: auto;
-    margin-top: 10px;
-} */
 
 .user-profile {
     display: flex;
@@ -380,4 +300,92 @@ body {
     width: 100%;
     border-radius: 4px;
     margin-bottom: 5px;
+}
+
+.company-search {
+    flex: 1;
+    background-color: rgba(255, 255, 255, .1);
+    backdrop-filter: blur(10px);
+    border-radius: 5px;
+    margin-bottom: 5px;
+    overflow-y: auto;
+}
+
+.employee-search {
+    flex: 1;
+    background-color: rgba(255, 255, 255, .1);
+    backdrop-filter: blur(10px);
+    border-radius: 5px;
+    margin-top: 5px;
+    overflow-y: auto;
+}
+
+.employee-search::-webkit-scrollbar,
+.company-search::-webkit-scrollbar {
+    display: none;
+}
+
+.search-bar {
+    margin: 10px 10px;
+    width: 90%;
+    background-color: rgba(255, 255, 255, .2);
+    backdrop-filter: blur(50px);
+    display: flex;
+    align-items: center;
+    border-radius: 60px;
+    padding: 10px 10px;
+    position: fixed;
+    z-index: 8;
+}
+
+.search-bar input {
+    background: transparent;
+    flex: 1;
+    border: 0;
+    outline: none;
+    padding: 5px 5px;
+    font-size: 10px;
+    color: #00171f;
+}
+
+::placeholder {
+    color: #00171f;
+    font-size: 12px;
+}
+
+.search-bar button i {
+    width: 20px;
+}
+
+.search-bar button {
+    border: .5;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, .3);
+    backdrop-filter: blur(50px) saturate(180%);
+}
+
+.company-search a,
+.employee-search a{
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    margin-left: 15px;
+    margin-bottom: 30px;
+    color: #00171f;
+    width: fit-content;
+}
+
+.company-search a img ,
+.employee-search a img {
+    height: 30px;
+    border-radius: 4px;
+    margin-right: 15px;
+}
+
+.search-result {
+    top: 60px;
+    position: relative;
 }
