--- a/Co_lab/main/templates/main/home.html
+++ b/Co_lab/main/templates/main/home.html
@@ -7,14 +7,15 @@
 <div class="post">
     <div class="post-left">
         {% if request.user.is_authenticated %}
+        <a href="{% url 'user-profile' request.user.id %}">
             {% if employee.image %}
                 <img src="{{employee.image.url}}" height="30px">
             {% else %}
                 <img src="{% static 'styles/images/avatar.png' %}" height="30px">
             {% endif %}
-            <a href="#"><h1>{{request.user}}</h1></a>
+            <h1>{{request.user}}</h1></a>
         {% else %}
-            <a href="#"><h1>Login to access more of our services</h1></a>
+            <a href="{% url 'login' %}"><h1>Login to access more of our services</h1></a>
         {% endif %}
     </div>
 
