--- a/Co_lab/static/styles/styles.css
+++ b/Co_lab/static/styles/styles.css
@@ -9,7 +9,7 @@
 
 body {
     min-height: 100vh;
-    background: url('images/background1.png') repeat;
+    background: url('images/background1.png') no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -142,6 +142,7 @@ body {
     text-align: left;
     display: flex;
     margin: 50px auto;
+    padding: 8px;
 }
 
 .s-content {
@@ -388,4 +389,52 @@ body {
 .search-result {
     top: 60px;
     position: relative;
+}
+
+.header__wrapper{
+    background-color: rgba(255, 255, 255, .1);
+    backdrop-filter: blur(5px);
+}
+
+.header__wrapper header{
+    width: 100%;
+    background: url('images/background2.png') no-repeat 50% 20% / cover;
+    min-height: calc(100px + 15vw);
+}
+
+.header__wrapper .cols__container .left__col {
+    padding: 25px 20px;
+    text-align: center;
+    max-width: 350px;
+    position: relative;
+    margin: 0 auto;
+}
+
+.header__wrapper .cols__container .left__col .img__container {
+    position: absolute;
+    top: -50px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.header__wrapper .cols__container .left__col .img__container img {
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+    border-radius: 50%;
+    display: block;
+    box-shadow: 1px 3px 12px rgba(0, 0, 0, .18);
+}
+
+.header__wrapper .cols__container .left__col h2 {
+    margin-top: 60px;
+    font-weight: 600;
+    font-size: 22px;
+    margin-bottom: 5px;
+}
+
+.header__wrapper .cols__container .left__col p {
+    font-size: 0.9rem;
+    color: #818181;
+    margin: 0;
 }
