--- a/Co_lab/main/templates/main/user_profile.html
+++ b/Co_lab/main/templates/main/user_profile.html
@@ -1,5 +1,54 @@
 {% extends 'main.html' %}
+{% load static %}
 
 {% block content %}
+
+<div class="profile-container">
+    <div class="profile-scontainer">
+        <div class="profile-head">
+            <div class="img-container">
+                {% if employee.image %}
+                    <img src="{{employee.image.url}}" height="65px">
+                {% else %}
+                    <img src="{% static 'styles/images/avatar.png' %}" height="65px">
+                {% endif %}
+            </div>
+            <div class="info">
+                <h2>{{user.username}}</h2>
+                <p>{{user.email}}</p>
+            </div>
+        </div>
+        <div class="col-container">
+            <div class="left-col">
+                <div class="content">
+                    {% if employee %}
+                    <p><u>Phone : </u></p>
+                    <p>{{employee.phone_no}}p>
+                    <p><u>Address : </u></p>
+                    <p>{{employee.address}}</p>
+                    <p><u>Working In : </u></p>
+                    <p>{{employee.company}}</p>
+                    {% endif %}
+                </div>
+            </div>
+            <div class="right-col">
+                {% for post in employee_post %}
+                    <div class="post-container">
+                        <div class="user-profile">
+                            <div>
+                                <span>{{ post.created }}</span><br>
+                                <span>{{ post.created|timesince }} ago</span>
+                            </div>
+                        </div>
+                        <p class="post-text">{{ post.title }}</p>
+                        {% if post.image %}
+                            <img class="post-image" src="{{ post.image.url }}" class="post-img" width="100%">
+                        {% endif %}
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock content %}
