--- a/Co_lab/static/styles/styles.css
+++ b/Co_lab/static/styles/styles.css
@@ -390,3 +390,80 @@ body {
     top: 60px;
     position: relative;
 }
+
+.profile-container {
+    width: 100%;
+    text-align: center; 
+}
+
+.profile-scontainer {
+    width: 80%;
+    margin: 0 auto; 
+    background-color: rgba(255, 255, 255, .1);
+    backdrop-filter: blur(10px);
+    text-align: center;
+    border-radius: 10px;
+}
+
+.profile-head {
+    position: relative; 
+    top: 10px; 
+    width: 95%;
+    background: url('images/background2.png') no-repeat 50% 20% / cover;
+    border-radius: 10px;
+    justify-content: center;
+    margin: auto;
+}
+
+.profile-head .img-container {
+    display: inline-block;
+    vertical-align: top; 
+    margin-right: 20px; 
+    margin-top: 5px;
+}
+
+.profile-head .img-container img {
+    border-radius: 50%;
+}
+
+.profile-head .info {
+    margin-top: 5px;
+    display: inline-block;
+    vertical-align: top; 
+}
+
+.profile-head .info  p {
+    font-weight: 600;
+}
+
+.col-container {
+    display: flex;
+    flex-direction: row;
+    height: 70vh;
+    margin: 10px;
+}
+
+.left-col {
+    flex: 1;
+    padding: 20px;
+    overflow-y: auto;
+    margin: 10px;
+}
+
+.left-col .content {
+    text-align: left;
+}
+
+.right-col {
+    flex: 3;
+    padding: 20px;
+    overflow-y: auto;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.right-col::-webkit-scrollbar,
+.left-col::-webkit-scrollbar {
+    display: none;
+}
