--- a/Co_lab/main/templates/main/about_us.html
+++ b/Co_lab/main/templates/main/about_us.html
@@ -35,11 +35,11 @@
             </div>
         </div>
     </div>
-    <div class="s-container">
+    <!-- <div class="s-container">
         <div class="ss-container">
-            <div class="model">
+            <div class="model"> -->
                 <!-- <iframe src='https://my.spline.design/untitled-40a68cf67a71aad427015d0c1f830958/' frameborder='0' width='280px' height='500px'></iframe> -->
-                <iframe src='https://my.spline.design/untitled-aefc84ea3796e31d13b8fb57b6ba9629/' frameborder='0' width='300px' height='500px'></iframe>
+                <!-- <iframe src='https://my.spline.design/untitled-aefc84ea3796e31d13b8fb57b6ba9629/' frameborder='0' width='300px' height='500px'></iframe>
             </div>
             <div class="s-content">
                 <h1>Hi, I'm Prasanna Niraula !</h1>
@@ -54,5 +54,5 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 {% endblock content %}
