--- a/Co_lab/main/templates/main/company_profile.html
+++ b/Co_lab/main/templates/main/company_profile.html
@@ -33,6 +33,11 @@
             <div class="right-col">
                 {% for post in company_post %}
                     <div class="post-container">
+                        {% if request.user == post.host %}
+                            <div class="delete-post" style="text-align: right;">
+                                <a href="{% url 'delete-company-post' post.id %}" style="text-decoration: none;"><img src="{% static 'styles/images/delete.png' %}" height="25px" style="margin-right: 10px;"></a>
+                            </div>
+                        {% endif %}
                         <div class="user-profile">
                             <div>
                                 <a href="{% url 'user-profile' post.host.id %}" style="text-decoration: none;"><p class="post-host">Post : {{post.host}}</p></a>
@@ -46,6 +51,20 @@
                         {% endif %}
                     </div>
                 {% endfor %}
+                <div class="post-container">
+                    <div class="user-profile">
+                        <div>
+                            <span>{{ company.created }}</span><br>
+                            <span>{{ company.created|timesince }} ago</span>
+                        </div>
+                    </div>
+                    <p class="post-text">Account Created</p>
+                    {% if company.company_logo %}
+                        <img src="{{company.company_logo.url}}" class="post-img" width="100%">
+                    {% else %}
+                        <img src="{% static 'styles/images/company_avatar.png' %}" class="post-img" width="100%">
+                    {% endif %}
+                </div>
             </div>
         </div>
     </div>
