--- a/Co_lab/main/templates/main/user_profile.html
+++ b/Co_lab/main/templates/main/user_profile.html
@@ -22,7 +22,7 @@
             <div class="left-col">
                 <div class="content">
                     {% if employee %}
-                    <p><u>Phone : </u></p>
+                    <p><u>Phone no : </u></p>
                     <p>{{employee.phone_no}}p>
                     <p><u>Address : </u></p>
                     <p>{{employee.address}}</p>
@@ -34,6 +34,11 @@
             <div class="right-col">
                 {% for post in employee_post %}
                     <div class="post-container">
+                        {% if request.user == post.host %}
+                            <div class="delete-post" style="text-align: right;">
+                                <a href="{% url 'delete-employee-post' post.id %}" style="text-decoration: none;"><img src="{% static 'styles/images/delete.png' %}" height="25px" style="margin-right: 10px;"></a>
+                            </div>
+                        {% endif %}
                         <div class="user-profile">
                             <div>
                                 <span>{{ post.created }}</span><br>
@@ -42,10 +47,24 @@
                         </div>
                         <p class="post-text">{{ post.title }}</p>
                         {% if post.image %}
-                            <img class="post-image" src="{{ post.image.url }}" class="post-img" width="100%">
+                            <img src="{{ post.image.url }}" class="post-img" width="100%">
                         {% endif %}
                     </div>
                 {% endfor %}
+                <div class="post-container">
+                    <div class="user-profile">
+                        <div>
+                            <span>{{ user.date_joined }}</span><br>
+                            <span>{{ user.date_joined|timesince }} ago</span>
+                        </div>
+                    </div>
+                    <p class="post-text">Account Created</p>
+                    {% if employee.image %}
+                        <img src="{{employee.image.url}}" class="post-img" width="100%">
+                    {% else %}
+                        <img src="{% static 'styles/images/avatar.png' %}" class="post-img" width="100%">
+                    {% endif %}
+                </div>
             </div>
         </div>
     </div>
