--- a/Co_lab/static/styles/styles.css
+++ b/Co_lab/static/styles/styles.css
@@ -452,6 +452,8 @@ body {
 
 .left-col .content {
     text-align: left;
+    background: #fff;
+    border-radius: 5px;
 }
 
 .right-col {
@@ -467,3 +469,55 @@ body {
 .left-col::-webkit-scrollbar {
     display: none;
 }
+
+.delete-container {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .delete-message {
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+  }
+  
+  .delete-message h1 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  
+  .delete-message p {
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+  
+  .buttons {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .delete-btn, .cancel-btn {
+    padding: 10px 20px;
+    margin: 0 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .delete-btn {
+    background-color: #ff3333;
+    color: white;
+  }
+  
+  .cancel-btn {
+    background-color: #4CAF50;
+    color: white;
+  }
